force-app/main/default/objects/Lead/fields/ABN_Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>ABN_Registered_Date__c</fullName>
    <description>The registration of the company&apos;s ABN number.</description>
    <label>ABN Registered Date</label>
    <type>Date</type>
</CustomField>