force-app/main/default/objects/Lead/fields/Applicant_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Entity_Type__c</fullName>
    <description>The type of applicant appling for the Loan.</description>
    <label>Applicant Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUSTS</fullName>
            </value>
            <value>
                <fullName>SOLE TRADERS</fullName>
            </value>
            <value>
                <fullName>COMPANY</fullName>
            </value>
            <value>
                <fullName>PARTNERSHIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>