force-app/main/default/objects/Lead/fields/Asset_Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Supplier_Type__c</fullName>
    <description>The type of Supplier through will deal will happen.</description>
    <label>Asset Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEALER</fullName>
            </value>
            <value>
                <fullName>PRIVATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>