force-app/main/default/objects/Lead/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>The Asset name which borrower wanted to buy.</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCESS EQUIPMENT (BOOM/SCISSOR LIFTS)</fullName>
            </value>
            <value>
                <fullName>AGRICULTURAL FEED BIN</fullName>
            </value>
            <value>
                <fullName>AGRICULTURAL MACHINERY AND EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>ARTWORK</fullName>
            </value>
            <value>
                <fullName>ATTACHMENTS FOR EARTHMOVING</fullName>
            </value>
            <value>
                <fullName>ATTACHMENTS FOR EARTHMOVING MACHINERY</fullName>
            </value>
            <value>
                <fullName>ATV</fullName>
            </value>
            <value>
                <fullName>AUDIO VISUAL</fullName>
            </value>
            <value>
                <fullName>BUSES AND COACHES</fullName>
            </value>
            <value>
                <fullName>CAMPER VANS</fullName>
            </value>
            <value>
                <fullName>CARAVANS</fullName>
            </value>
            <value>
                <fullName>CLASSIC CARS (LOADINGS APPLY)</fullName>
            </value>
            <value>
                <fullName>CNC</fullName>
            </value>
            <value>
                <fullName>CNC MACHINES</fullName>
            </value>
            <value>
                <fullName>COFFEE MACHINES</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL MOTOR VEHICLES (UTES, VANS AND 4WDS)</fullName>
            </value>
            <value>
                <fullName>COMPRESSORS</fullName>
            </value>
            <value>
                <fullName>COMPUTER EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>CONCRETE CUTTERS</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION AND EARTH MOVING EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION AND EARTH MOVING EQUIPMENT (NON-MINING)</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION EQUIPMENT (NON WHEELED &amp; NON TRACKED) ATTACHMENTS TO PRIMARY ASSETS</fullName>
            </value>
            <value>
                <fullName>CONVEYORS</fullName>
            </value>
            <value>
                <fullName>COOL ROOMS AND SPRAY BOOTHS</fullName>
            </value>
            <value>
                <fullName>DEMOUNTABLES AND SHIPPING CONTAINERS</fullName>
            </value>
            <value>
                <fullName>DETACHABLE GPS UNITS</fullName>
            </value>
            <value>
                <fullName>EDGE BENDERS</fullName>
            </value>
            <value>
                <fullName>ELECTRIC OR MOTOR VEHICLE USED FOR HIRE/RENTAL PURPOSES</fullName>
            </value>
            <value>
                <fullName>ENGINEERING AND TOOLMAKING</fullName>
            </value>
            <value>
                <fullName>ENGINEERING AND TOOLMAKING EQUIPMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>