force-app/main/default/objects/Lead/fields/Ballon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ballon_Amount__c</fullName>
    <description>The Balloon Amount promised by the user to provide after certain interval of time.</description>
    <label>Ballon Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>