force-app/main/default/objects/Lead/fields/Debt_to_income_ratio__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_income_ratio__c</fullName>
    <label>Debt to income ratio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>