force-app/main/default/objects/Lead/fields/GST_Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>GST_Registered_Date__c</fullName>
    <description>The Date of Registration of GST of business or company.</description>
    <label>GST Registered Date</label>
    <type>Date</type>
</CustomField>