force-app/main/default/objects/Lead/fields/Guarantor_1_Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_1_Residential_Status__c</fullName>
    <description>Guarantor 1 Residential Status</description>
    <label>Guarantor 1 Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owning</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>