force-app/main/default/objects/Lead/fields/Interest_Rate_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Calculations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The interest rate calculation is accurate to two decimal places.</description>
    <label>Interest Rate Calculations</label>
    <type>Checkbox</type>
</CustomField>