force-app/main/default/objects/Lead/fields/Key_Facts_Sheets_Highlighted__c.field-meta.xml
<CustomField>
    <fullName>Key_Facts_Sheets_Highlighted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Key Facts Sheet is highlight the comparison rate in bold.</description>
    <label>Key Facts Sheets Highlighted</label>
    <type>Checkbox</type>
</CustomField>