force-app/main/default/objects/Lead/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <label>KYC_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Non-Verified</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>