force-app/main/default/objects/Lead/fields/Product_Disclosure_Statements__c.field-meta.xml
<CustomField>
    <fullName>Product_Disclosure_Statements__c</fullName>
    <label>Product Disclosure Statement Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>