force-app/main/default/objects/Lead/fields/Repayment_Term__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Term__c</fullName>
    <description>The Term of Repayment selected by the user.</description>
    <label>Repayment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>84</fullName>
                <default>true</default>
                <label>84</label>
            </value>
            <value>
                <fullName>83</fullName>
            </value>
            <value>
                <fullName>82</fullName>
            </value>
            <value>
                <fullName>81</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>79</fullName>
            </value>
            <value>
                <fullName>78</fullName>
            </value>
            <value>
                <fullName>77</fullName>
            </value>
            <value>
                <fullName>76</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>74</fullName>
            </value>
            <value>
                <fullName>73</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>71</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>69</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
            <value>
                <fullName>63</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>61</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>59</fullName>
            </value>
            <value>
                <fullName>58</fullName>
            </value>
            <value>
                <fullName>57</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>