force-app/main/default/objects/Lead/fields/Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Amount__c</fullName>
    <description>The Loan Amount Request by the user.</description>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>