force-app/main/default/objects/Lead/fields/Residence_status__c.field-meta.xml
<CustomField>
    <fullName>Residence_status__c</fullName>
    <label>Residence status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>