force-app/main/default/objects/Lead/fields/Unconscionable_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Unconscionable_Conduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the lender pressures  borrower to sign a contract without fully understanding the terms.</description>
    <label>Unconscionable Conduct</label>
    <type>Checkbox</type>
</CustomField>