force-app/main/default/objects/Lead/fields/Unfair_Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>Unfair_Contract_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the contract term allows the lender to unilaterally change interest rates without notice, Do you agree with it ?</description>
    <label>Unfair Contract Terms</label>
    <type>Checkbox</type>
</CustomField>