force-app/main/default/objects/Lead/fields/Used_Asset__c.field-meta.xml
<CustomField>
    <fullName>Used_Asset__c</fullName>
    <description>The Asset which borrower wants to buy is new or old.</description>
    <label>Used Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USED</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>NEW</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>